[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "markdown2>=2.5.3",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "plotly>=5.24.1",
    "pytube>=15.0.0",
    "replit>=4.1.0",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.4",
    "youtube-transcript-api>=0.6.3",
    "yt-dlp>=2025.1.26",
]
